test/invalid-semantics/tcomp000_varDeclDecl/varDeclDecl.mag
-- Author: tcomp000, Vasco T. Vasconcelos

fun f (_) : Unit -> Int =
  var x : Int = var y : Int = 3

fun main (_) : Unit -> Unit =
  print(f(unit))
